tests/baselines/reference/parserConstructorDeclaration9.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration9.ts (1 errors) ====
    class C {
      constructor<T>() { }
                  ~
!!! error TS1092: Type parameters cannot appear on a constructor declaration.
    }